<resources>
    <string name="app_name">VK Flow</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>

    <string name="comments">Comments</string>
    <string name="like_description">Like</string>

    <string name="no_news">No news</string>
    <string name="no_comments">No comments</string>
    <string name="some_error">Some error, probably Internet is not available.</string>

    <string name="content_friend_photo">Friend photo</string>

    <string name="sample_text_date">10 hours ago</string>
    <string name="sample_text_news_content">Lorem ipsum donec porttitor, congue ultricies gravida ut risus odio auctor sodales ut. Nec quisque massa elementum sagittis urna nec ultricies gravida non malesuada donec — congue. Sed rutrum amet massa morbi magna: ipsum eget donec, molestie sagittis, arcu — eros sapien urna mattis arcu magna vulputate leo eget congue.</string>
    <string name="sample_text_friend_name">Hugh Laurie. Clone #%1$s</string>
    <string name="sample_comments_count">15</string>
    <string name="sample_likes_count">4</string>

    <string name="widget_name">Newsfeed</string>

    <!-- VK app for an access to VK API -->
    <integer name="com_vk_sdk_AppId">0<!-- Instead of 0 you need write right app id --></integer>
</resources>
